--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ alembic==0.9.9
 bcrypt <= 3.1.4
 blinker==1.4
 certifi <= 2018.1.18
-cffi <= 1.11.5
+cffi
 chardet==3.0.4
 click==6.7
 Flask==1.0.2
@@ -10,7 +10,7 @@ Flask-Bcrypt <= 0.7.1
 Flask-Dance==0.14.0
 Flask-DebugToolbar==0.10.1
 Flask-Login==0.4.1
-Flask-Mail <= 0.9.1
+Flask-Mail
 Flask-Migrate==2.1.1
 Flask-OAuth==0.12
 Flask-OAuthlib==0.9.4
